# PCIV

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  justfile  plan.yaml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: agent-framework-composition.md  configuration.md  next-iteration-brief.md  roadmap.md
docs/decisions/: 0001-agent-framework-port.md  0002-sqlite-for-ledger.md  0003-pydantic-for-structured-agent-io.md  0004-untrusted-task-sandbox.md  0005-shared-core-agentcore.md  0006-diff-time-secret-leak-detection.md  0007-cross-run-budget-ledger.md
scripts/: swe_bench_run.py
src/pciv/: __init__.py  budget.py  cli.py  config.py  merge.py  redaction.py  sandbox.py  types.py  workflow.py  worktree.py
src/pciv/agents/: __init__.py  _azure.py  _json_agent.py  critique_agent.py  implement_agent.py  plan_agent.py  verify_agent.py
src/pciv/state/: __init__.py  db.py  schema.sql
src/pciv/telemetry/: __init__.py  logging.py  metrics.py  tracing.py
tests/: _gitutil.py  conftest.py  test_budget.py  test_cli_e2e.py  test_config_env_overrides.py  test_critique_agent.py  test_cross_run_budget.py  test_db_pragmas.py  test_doctor_and_logging.py  test_error_paths.py  test_implement_agent.py  test_merge.py  test_metrics.py  test_plan_agent.py  test_readme_examples.py  test_sandbox.py  test_secret_leak.py  test_secret_scanner_integration.py  test_types_validation.py  test_verify_agent.py  test_workflow.py  test_workflow_helpers.py  test_worktree.py
